--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anno_frontend",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p build-only",
@@ -20,7 +21,10 @@
     "@vueuse/core": "^9.13.0",
     "@vueuse/router": "^10.0.2",
     "axios": "^1.3.5",
+    "bibtex-js-parser": "^1.1.6",
     "date-fns": "^2.29.3",
+    "hsluv": "^1.0.1",
+    "lodash": "^4.17.21",
     "naive-ui": "^2.34.3",
     "pinia": "^2.0.32",
     "sass": "^1.62.0",
