--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/material": "^0.12.0",
     "@vicons/tabler": "^0.12.0",
+    "@vueuse/components": "^10.6.1",
     "@vueuse/core": "^9.13.0",
     "@vueuse/router": "^10.0.2",
+    "add": "^2.0.6",
     "axios": "^1.3.5",
     "bibtex-js-parser": "^1.1.6",
     "date-fns": "^2.29.3",
@@ -30,10 +32,12 @@
     "sass": "^1.62.0",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1",
+    "v-click-outside": "^3.2.0",
     "vfonts": "^0.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6",
-    "xicons": "^1.0.0"
+    "xicons": "^1.0.0",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
